[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"


[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["Marc <marc@yieldmos.com>"]
repository = "https://github.com/yieldmos/ac-outpost"


[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", default-features = false, features = [
    "stargate",
    # "staking",
    # "cosmwasm_1_4",
] }
cosmwasm-storage = "1.5.0"
cw-orch = { version = "0.19.1", features = ["daemon"] }
cw-storage-plus = "1.2.0"
cw-multi-test = "0.20.0"
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
semver = "1"
cosmos-sdk-proto = { version = "0.19", default-features = false, features = [
    "cosmwasm",
] }
cw20 = "1.0.1"
cw20-stake = { git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v2.1.0", features = [
    "library",
] }
cw20-vesting = { package = "cw20-vesting", git = "https://github.com/wynddao/wynddao.git", tag = "v1.6.0" }
wyndex = { git = "https://github.com/wynddao/wynddex.git", tag = "v2.2.0" }
wyndex-multi-hop = { git = "https://github.com/wynddao/wynddex.git", tag = "v2.2.0", features = [
    "library",
] }
wynd-stake = { git = "https://github.com/wynddao/wynddao.git", tag = "v1.7.0", features = [
    "library",
] }
wyndex-factory = { git = "https://github.com/wynddao/wynddex.git", tag = "v2.2.0" }
outpost-utils = { path = "./packages/utils" }
wynd-helpers = { path = "./packages/wynd-helpers" }
terraswap-helpers = { path = "./packages/terraswap-helpers" }
# wyndex-stake = { git = "https://github.com/wynddao/wynddex.git", tag = "v2.2.0" }
osmosis-std = "0.21.0"

osmosis-helpers = { path = "./packages/osmosis-helpers" }
# mars-types = { git = "https://github.com/mars-protocol/contracts.git", version = "2.0.0" }

white-whale = { git = "https://github.com/White-Whale-Defi-Platform/white-whale-core.git", tag = "v1.4.0-juno-1-token_factory-hotfix" }
cw-grant-spec = { git = "https://github.com/kakucodes/authzpp", version = "0.3.2" }
withdraw-rewards-tax-grant = { git = "https://github.com/kakucodes/authzpp", version = "0.3.0", features = [
    "library",
] }
balance-token-swap = { git = "https://github.com/racoon-supply-rac/balance-dao", features = [
    "library",
] }
# stake-easy = { git = "https://github.com/arufa-research/stakeeasy-juno-contracts", features = [
#     "library",
# ], package = "staking-contract" }

bond-router = { git = "https://github.com/wynddao/wynd-lsd", features = [
    "library",
] }

furnace = { git = "https://github.com/deving-zone-community/community-furnace.git", features = [
    "library",
] }
# eris = { git = "https://github.com/erisprotocol/contracts-tokenfactory.git", tag = "v1.0.2-migaloo-arb-vault" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", default-features = false, rev = "3b44a4044b823a145730f66ffaf7ae4205b2cd35" }
universal-destinations = { path = "./packages/universal-destinations" }
juno-destinations = { path = "./packages/juno-destinations" }
migaloo-destinations = { path = "./packages/migaloo-destinations" }
sail-destinations = { path = "./packages/sail-destinations" }
osmosis-destinations = { path = "./packages/osmosis-destinations" }
membrane = { git = "https://github.com/MembraneFinance/membrane-core.git", version = "0.1.0" }
struct_iterable = "0.1.1"


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
