[package]
name = "ymos-migaloodca-outpost"
authors = ["Marc <marc@yieldmos.com>"]
version = { workspace = true }
edition = { workspace = true }
description = "Yieldmos Migaloo DCAing Outpost"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
interface = ["dep:cw-orch"]


[dependencies]
withdraw-rewards-tax-grant = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = [
  "stargate",
  # "staking",
  # "cosmwasm_1_4",
] }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
cosmos-sdk-proto = { workspace = true }
cw20 = { workspace = true }
cw20-stake = { workspace = true }
cw20-vesting = { workspace = true }
outpost-utils = { workspace = true }

cw-grant-spec = { workspace = true }
cw-orch = { workspace = true, optional = true }
terraswap-helpers = { workspace = true }
white-whale = { workspace = true }
universal-destinations = { workspace = true }
migaloo-destinations = { workspace = true }
sail-destinations = { workspace = true }


[dev-dependencies]
cw-multi-test = { workspace = true }
