[package]
name = "ymos-osmodca-outpost"
authors = ["Marc <marc@yieldmos.com>"]
version = { workspace = true }
edition = { workspace = true }
description = "Yieldmos Juno DCAing Outpost"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
interface = ["dep:cw-orch"]


[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = [
  "stargate",
  # "staking",
  "cosmwasm_1_4",
] }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
cosmos-sdk-proto = { workspace = true }
cw20 = { workspace = true }
cw20-stake = { workspace = true }
cw20-vesting = { workspace = true }
wyndex = { workspace = true }
wyndex-multi-hop = { workspace = true }
wynd-stake = { workspace = true }
wynd-helpers = { workspace = true }
outpost-utils = { workspace = true }
universal-destinations = { workspace = true }
osmosis-destinations = { workspace = true }
sail-destinations = { workspace = true }
osmosis-std = { workspace = true }
cw-grant-spec = { workspace = true }
cw-orch = { workspace = true, optional = true }
terraswap-helpers = { workspace = true }
white-whale = { workspace = true }
osmosis-helpers = { workspace = true }


[dev-dependencies]
cw-multi-test = { workspace = true }
