[package]
name = "ymos-wyndstake-outpost"
version = {workspace = true}
authors = ["Marc <marc@yieldmos.com>"]
edition = {workspace = true}
description = "Yieldmos Wynddao Staking Outpost"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-schema = {workspace = true}
cosmwasm-std =  {workspace = true}
cosmwasm-storage =  {workspace = true}
cw-storage-plus =  {workspace = true}
cw2 =  {workspace = true}
schemars =  {workspace = true}
serde =  {workspace = true}
thiserror =  {workspace = true}
semver =  {workspace = true}
cosmos-sdk-proto =  {workspace = true}
cw20 =  {workspace = true}
cw20-stake =  {workspace = true}
cw20-vesting = {workspace = true}
wyndex =  {workspace = true}
wyndex-multi-hop =  {workspace = true}
wynd-stake = {workspace = true}
# wynd-utils = {workspace = true}
outpost-utils = {workspace=true}


[dev-dependencies]
cw-multi-test = {workspace = true}